@@ -186,6 +186,9 @@ div#ps-seasons_h-dropdown {
 div#ps-login-inner {
     text-align: center;
 }
+div#ps-login-inner h4 {
+	color: #16171c;
+}
 #ps-login-inner a {
     font-size: larger;
 }
@@ -193,6 +196,7 @@ div#ps-login-inner {
 	margin-bottom: 0.2em;
 }
 #ps-login-inner p label {
+	color: #16171c;
 	padding-right: 5px;
 	margin-top: 5px;
 	float: left;
@@ -208,6 +212,7 @@ div#ps-login-inner {
 	cursor: pointer;
 }
 #ps-login-reg {
+	color: #16171c;
 	position: absolute;
 	right: 10px;
 	top: 13px;
@@ -216,6 +221,7 @@ div#ps-login-inner {
 	text-decoration: underline;
 }
 #ps-login-options {
+	color: #16171c;
 	position: absolute;
 	right: 95px;
 	bottom: 7px;
