@@ -34,42 +34,42 @@
 </div>
 </form>
 {if $show_login and $cookieconsent}
-<a id="ps-login-link" href="{url _base='login.php' _ref=1}" title="<#Quick Login Popup#>"><img id="ps-login-img" src="{theme->url}/img/menu-login-icon.png" alt="<#Login#>"></a>
+<a id="ps-login-link" href="login.php" title="<#Quick Login Popup#>"><img id="ps-login-img" src="{theme->url}/img/menu-login-icon.png" alt="<#Login#>"></a>
 {/if}
 </div>
 <ul>
 {if $conf.main.site_url}
 	<li class="first"><a href="{$conf.main.site_url|escape}" title="<#Go to#> {$conf.main.site_url|escape}"><#Home#></a></li>
-	<li><a href="{url _base='index.php'}" title="Overall Teams Standings"><#Overall#></a></li>
+	<li><a href="index.php" title="Overall Teams Standings"><#Overall#></a></li>
 {else}
-	<li class="first"><a href="{url _base='index.php'}" title="Overall Teams Standings"><#Overall#></a></li>
+	<li class="first"><a href="index.php" title="Overall Teams Standings"><#Overall#></a></li>
 {/if}
 {if $division}
-	<li><a href="{url _base='divisions.php'}" title="Divisions Standings"><#Divisions#></a></li>
+	<li><a href="divisions.php" title="Divisions Standings"><#Divisions#></a></li>
 {/if}
 {if $wildcard}
-	<li><a href="{url _base='wc.php'}" title="Wild Card Standings"><#Wild Card#></a></li>
+	<li><a href="wc.php" title="Wild Card Standings"><#Wild Card#></a></li>
 {/if}
-	<li><a href="{url _base='def.php'}" title="Teams Defensive Statistics"><#Defensive#></a></li>
-	<li><a href="{url _base='off.php'}" title="Teams Offensive Statistics"><#Offensive#></a></li>
+	<li><a href="def.php" title="Teams Defensive Statistics"><#Defensive#></a></li>
+	<li><a href="off.php" title="Teams Offensive Statistics"><#Offensive#></a></li>
 {if $conf.main.awards.enable}
-	<li><a href="{url _base='awards.php'}" title="Hall of Fame"><#HoF#></a></li>
+	<li><a href="awards.php" title="Hall of Fame"><#HoF#></a></li>
 {/if}
 {if $show_admin and $cookieconsent}
-	<li><a href="{url _base='admin/index.php'}"><#Admin#></a></li>
+	<li><a href="admin/index.php"><#Admin#></a></li>
 {/if}
 {if !psss_user_logged_in() and $show_login and $cookieconsent}
-	<li><a href="{url _base='login.php'}" title="Login, Register and Reset Password"><#Login#></a></li>
+	<li><a href="login.php" title="Login, Register and Reset Password"><#Login#></a></li>
 {/if}
 {if psss_user_logged_in()}
-	<li><a href="{url _base='logout.php'}"><#Logout#></a></li>
+	<li><a href="logout.php"><#Logout#></a></li>
 {/if}
 </ul>
 </div>
 <!---->
 {if !psss_user_logged_in() and $cookieconsent}
 <!--#LOGIN_POPUP#-->
-<form method="post" action="{url _base='login.php' _ref=1}">
+<form method="post" action="login.php">
 <div id="ps-login-popup" style="display: none">
 <div id="ps-login-inner">
 	{if $show_register}<div id="ps-login-reg"><#Newbie?#> -- <a href="register.php"><#Register!#></a></div>{/if}
@@ -99,7 +99,7 @@
 <div id="ps-login-popup" style="display: none">
 <div id="ps-login-inner">
 	<h4><#Logged in as#> <b>{$user.username|escape}</b></h4>
-	<p><a href="{url _base='logout.php' _ref=1}"><#Click here to logout!#></a></p>
+	<p><a href="logout.php"><#Click here to logout!#></a></p>
 </div>
 </div>
 <!---->
